--- a/Depo/Depo/Presentation/Cells/PackagesTableViewCell/PackagesTableViewCell.xib
+++ b/Depo/Depo/Presentation/Cells/PackagesTableViewCell/PackagesTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,12 +17,23 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b6e-T2-bNs">
-                        <rect key="frame" x="16" y="16" width="0.0" height="19"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xEF-No-SGf">
+                        <rect key="frame" x="16" y="12" width="50" height="27"/>
+                        <subviews>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="customPopUpInfo" translatesAutoresizingMaskIntoConstraints="NO" id="3VD-7V-DDz">
+                                <rect key="frame" x="-23" y="0.0" width="23" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="23" id="tEd-QB-7WG"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b6e-T2-bNs">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S5G-Jp-2dC">
                         <rect key="frame" x="409" y="16" width="0.0" height="19"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -33,23 +44,25 @@
                 <color key="backgroundColor" name="primaryBackground"/>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="S5G-Jp-2dC" secondAttribute="bottom" constant="16" id="1xY-vN-bkp"/>
-                    <constraint firstItem="b6e-T2-bNs" firstAttribute="top" secondItem="noX-YT-ASg" secondAttribute="top" constant="16" id="3Ws-EG-QoB"/>
+                    <constraint firstItem="xEF-No-SGf" firstAttribute="top" secondItem="noX-YT-ASg" secondAttribute="top" constant="12" id="5wU-5X-8iV"/>
                     <constraint firstAttribute="trailing" secondItem="S5G-Jp-2dC" secondAttribute="trailing" constant="5" id="75G-2C-64m"/>
                     <constraint firstItem="S5G-Jp-2dC" firstAttribute="top" secondItem="noX-YT-ASg" secondAttribute="top" constant="16" id="CHV-27-AMD"/>
-                    <constraint firstItem="S5G-Jp-2dC" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="b6e-T2-bNs" secondAttribute="trailing" constant="16" id="I1K-RM-FjC"/>
-                    <constraint firstAttribute="bottom" secondItem="b6e-T2-bNs" secondAttribute="bottom" constant="16" id="dXD-LA-NhQ"/>
-                    <constraint firstItem="b6e-T2-bNs" firstAttribute="leading" secondItem="noX-YT-ASg" secondAttribute="leading" constant="16" id="lMc-8H-znk"/>
+                    <constraint firstItem="xEF-No-SGf" firstAttribute="leading" secondItem="noX-YT-ASg" secondAttribute="leading" constant="16" id="V2x-Zh-tiN"/>
+                    <constraint firstAttribute="bottom" secondItem="xEF-No-SGf" secondAttribute="bottom" constant="12" id="XCu-PK-PzX"/>
+                    <constraint firstItem="S5G-Jp-2dC" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="xEF-No-SGf" secondAttribute="trailing" constant="16" id="j7X-tw-j9m"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" name="primaryBackground"/>
             <connections>
                 <outlet property="descriptionLabel" destination="S5G-Jp-2dC" id="ghf-Ff-g4k"/>
+                <outlet property="infoImageView" destination="3VD-7V-DDz" id="bwn-bM-9Wp"/>
                 <outlet property="titleLabel" destination="b6e-T2-bNs" id="088-vD-1ln"/>
             </connections>
             <point key="canvasLocation" x="400.00000000000006" y="73.995535714285708"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="customPopUpInfo" width="43" height="43"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
