--- a/Depo/Lifedrive/Presentation/UserStories/Introduce/View/IntroduceViewController.xib
+++ b/Depo/Lifedrive/Presentation/UserStories/Introduce/View/IntroduceViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -24,11 +24,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_with_icon" translatesAutoresizingMaskIntoConstraints="NO" id="LEY-g9-CGx">
-                    <rect key="frame" x="161.66666666666666" y="52" width="90.666666666666657" height="68"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="logo_with_icon" translatesAutoresizingMaskIntoConstraints="NO" id="LEY-g9-CGx">
+                    <rect key="frame" x="142" y="52" width="91" height="68"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="68" id="B0L-Rl-80B">
                             <variation key="widthClass=regular" constant="90"/>
@@ -36,11 +36,11 @@
                         <constraint firstAttribute="width" secondItem="LEY-g9-CGx" secondAttribute="height" multiplier="4:3" id="zyh-gd-EeE"/>
                     </constraints>
                 </imageView>
-                <view contentMode="scaleToFill" verticalHuggingPriority="240" verticalCompressionResistancePriority="240" translatesAutoresizingMaskIntoConstraints="NO" id="jG1-DS-9p5">
-                    <rect key="frame" x="0.0" y="130" width="414" height="187.66666666666663"/>
+                <view contentMode="scaleToFill" verticalHuggingPriority="240" verticalCompressionResistancePriority="240" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jG1-DS-9p5">
+                    <rect key="frame" x="0.0" y="130" width="375" height="315.66666666666674"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" image="IntroduceImage1" translatesAutoresizingMaskIntoConstraints="NO" id="wFf-k7-HE2">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="187.66666666666666"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" ambiguous="YES" image="IntroduceImage1" translatesAutoresizingMaskIntoConstraints="NO" id="wFf-k7-HE2">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="315.66666666666669"/>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" name="primaryBackground"/>
@@ -52,7 +52,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bbr-4v-zM9">
-                    <rect key="frame" x="30" y="343.66666666666669" width="354" height="28"/>
+                    <rect key="frame" x="30" y="246.5" width="315" height="28"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="28" id="nFP-W8-3O9"/>
                     </constraints>
@@ -61,16 +61,16 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K31-Jg-aUI">
-                    <rect key="frame" x="30" y="382.66666666666669" width="354" height="20.333333333333314"/>
+                    <rect key="frame" x="30" y="285.5" width="315" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="n2a-av-aYd">
-                    <rect key="frame" x="77" y="443" width="260" height="297"/>
+                    <rect key="frame" x="53" y="346" width="269" height="297"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N29-gd-nz6" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="260" height="48"/>
+                            <rect key="frame" x="4.5" y="0.0" width="260" height="48"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="260" id="0QQ-jr-zZ0">
                                     <variation key="widthClass=regular" constant="348"/>
@@ -85,7 +85,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EJV-go-laA">
-                            <rect key="frame" x="109.33333333333333" y="63" width="41.333333333333329" height="15"/>
+                            <rect key="frame" x="114" y="63" width="41.5" height="15"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="15" id="I2Q-Ij-YQA"/>
                             </constraints>
@@ -94,7 +94,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="STK-bc-GEv" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="35" y="93" width="190" height="48"/>
+                            <rect key="frame" x="39.5" y="93" width="190" height="48"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="48" id="GPS-RI-Ueo"/>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="190" id="Vyz-va-tIh">
@@ -107,7 +107,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xlN-OP-Yg4">
-                            <rect key="frame" x="109.33333333333333" y="156" width="41.333333333333329" height="15"/>
+                            <rect key="frame" x="114" y="156" width="41.5" height="15"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="15" id="Lto-gl-ofZ"/>
                             </constraints>
@@ -116,10 +116,10 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EG9-7o-rTM" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="186" width="260" height="48"/>
+                            <rect key="frame" x="0.0" y="186" width="269" height="48"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="260" id="tDW-id-V3n">
-                                    <variation key="widthClass=regular" constant="348"/>
+                                    <variation key="heightClass=regular" constant="269"/>
                                 </constraint>
                                 <constraint firstAttribute="height" constant="48" id="wUh-aS-Gx9"/>
                             </constraints>
@@ -129,11 +129,11 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CDm-Bx-qgg" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="249" width="260" height="48"/>
+                            <rect key="frame" x="0.0" y="249" width="269" height="48"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="48" id="aMr-km-BC7"/>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="260" id="dVQ-S3-Pnj">
-                                    <variation key="widthClass=regular" constant="348"/>
+                                    <variation key="heightClass=regular" constant="269"/>
                                 </constraint>
                             </constraints>
                             <state key="normal" title="Button"/>
@@ -147,10 +147,10 @@
             <viewLayoutGuide key="safeArea" id="hc0-kb-fgC"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
-                <constraint firstItem="n2a-av-aYd" firstAttribute="bottom" secondItem="hc0-kb-fgC" secondAttribute="bottom" constant="4" id="2MT-x3-F6a"/>
                 <constraint firstItem="LEY-g9-CGx" firstAttribute="top" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="top" constant="25" id="37d-aJ-JZI"/>
                 <constraint firstItem="hc0-kb-fgC" firstAttribute="trailing" secondItem="K31-Jg-aUI" secondAttribute="trailing" constant="30" id="4BL-aC-DjB"/>
                 <constraint firstItem="LEY-g9-CGx" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" priority="749" constant="52" id="7Ad-iU-EAl"/>
+                <constraint firstItem="hc0-kb-fgC" firstAttribute="bottom" secondItem="n2a-av-aYd" secondAttribute="bottom" constant="24" id="C26-Ap-5gI"/>
                 <constraint firstItem="Bbr-4v-zM9" firstAttribute="leading" secondItem="hc0-kb-fgC" secondAttribute="leading" constant="30" id="EUZ-8p-kxa"/>
                 <constraint firstItem="jG1-DS-9p5" firstAttribute="top" secondItem="LEY-g9-CGx" secondAttribute="bottom" constant="10" id="Ggm-ol-elO"/>
                 <constraint firstItem="jG1-DS-9p5" firstAttribute="leading" secondItem="hc0-kb-fgC" secondAttribute="leading" id="LhW-ak-rkC"/>
@@ -168,7 +168,7 @@
     </objects>
     <resources>
         <image name="IntroduceImage1" width="215" height="175"/>
-        <image name="logo_with_icon" width="361.66665649414062" height="430"/>
+        <image name="logo_with_icon" width="353.5" height="429.5"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
