--- a/Depo/Depo/Presentation/SubViews/CustomTabBars/PhotoVideo/PhotoVideoController.xib
+++ b/Depo/Depo/Presentation/SubViews/CustomTabBars/PhotoVideo/PhotoVideoController.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -31,13 +30,12 @@
                     </collectionViewFlowLayout>
                 </collectionView>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
-                <constraint firstItem="eae-DM-hKW" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="9WR-dd-S8V"/>
-                <constraint firstItem="eae-DM-hKW" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="PhA-zj-jKg"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="eae-DM-hKW" secondAttribute="bottom" id="cx7-7M-pmp"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eae-DM-hKW" secondAttribute="trailing" id="ih3-Mg-UCB"/>
+                <constraint firstItem="eae-DM-hKW" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="9WR-dd-S8V"/>
+                <constraint firstItem="eae-DM-hKW" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="PhA-zj-jKg"/>
+                <constraint firstAttribute="bottom" secondItem="eae-DM-hKW" secondAttribute="bottom" id="cx7-7M-pmp"/>
+                <constraint firstAttribute="trailing" secondItem="eae-DM-hKW" secondAttribute="trailing" id="ih3-Mg-UCB"/>
             </constraints>
             <point key="canvasLocation" x="138" y="154"/>
         </view>
