--- a/Depo/Depo/Presentation/UserStories/Others/SegmentedController/SegmentedController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/SegmentedController/SegmentedController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -57,7 +57,7 @@
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="qmm-Jd-Jcw" secondAttribute="trailing" id="9Wz-zQ-xir"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="aCl-BS-mK7" secondAttribute="bottom" id="Qo5-JE-MBA"/>
+                <constraint firstAttribute="bottom" secondItem="aCl-BS-mK7" secondAttribute="bottom" id="Qo5-JE-MBA"/>
                 <constraint firstItem="aCl-BS-mK7" firstAttribute="top" secondItem="qmm-Jd-Jcw" secondAttribute="bottom" id="YHr-sB-52A"/>
                 <constraint firstItem="aCl-BS-mK7" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="icA-Az-Mxl"/>
                 <constraint firstItem="qmm-Jd-Jcw" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="quh-Ad-alj"/>
