--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/MainScreen/ContactSyncViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/MainScreen/ContactSyncViewController.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,10 +20,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LCy-LB-VO5">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bUm-qI-rby" userLabel="Content View">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             <color key="backgroundColor" name="primaryBackground"/>
                         </view>
                     </subviews>
@@ -38,13 +37,12 @@
                     </constraints>
                 </scrollView>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="LCy-LB-VO5" secondAttribute="trailing" id="GA2-m2-bTO"/>
-                <constraint firstItem="LCy-LB-VO5" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="J9w-DQ-Qy2"/>
-                <constraint firstItem="LCy-LB-VO5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="MOt-5v-Nlh"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="LCy-LB-VO5" secondAttribute="bottom" id="UUF-jQ-4ZY"/>
+                <constraint firstAttribute="trailing" secondItem="LCy-LB-VO5" secondAttribute="trailing" id="GA2-m2-bTO"/>
+                <constraint firstItem="LCy-LB-VO5" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="J9w-DQ-Qy2"/>
+                <constraint firstItem="LCy-LB-VO5" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="MOt-5v-Nlh"/>
+                <constraint firstAttribute="bottom" secondItem="LCy-LB-VO5" secondAttribute="bottom" id="UUF-jQ-4ZY"/>
             </constraints>
             <point key="canvasLocation" x="139" y="137"/>
         </view>
