LB-931 Google Login
remote config

--- a/Depo/Depo/Presentation/UserStories/Others/AppleGoogleUpdatePasswordPoup/AppleGoogleUpdatePasswordPopup.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/AppleGoogleUpdatePasswordPoup/AppleGoogleUpdatePasswordPopup.xib
@@ -40,22 +40,22 @@
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Ryp-hN-zNN">
                             <rect key="frame" x="54" y="70.5" width="260" height="102"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dv3-bS-2mD" customClass="RoundedInsetsButton" customModule="lifebox" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dv3-bS-2mD" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="260" height="46"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="46" id="Rwj-7C-Xm7"/>
-                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="260" id="TNJ-L6-u6E"/>
+                                        <constraint firstAttribute="width" constant="260" id="TNJ-L6-u6E"/>
                                     </constraints>
                                     <state key="normal" title="Button"/>
                                     <connections>
                                         <action selector="onSignInWithGoogle:" destination="-1" eventType="touchUpInside" id="f4d-yk-vcX"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avO-qZ-ocm" customClass="RoundedInsetsButton" customModule="lifebox" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avO-qZ-ocm" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="56" width="260" height="46"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="46" id="B6K-2i-aru"/>
-                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="260" id="OKm-ke-D2d"/>
+                                        <constraint firstAttribute="width" constant="260" id="OKm-ke-D2d"/>
                                     </constraints>
                                     <state key="normal" title="Button"/>
                                     <connections>
